--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="background-overlay"></div>
     </div>
         <!-- Loader Screen -->
-    <div class="loader-container" id="loader">
+    <!-- <div class="loader-container" id="loader">
         <div class="background-image"></div>
         <div class="background-overlay"></div>
         <svg xmlns="http://www.w3.org/2000/svg" height="200px" width="200px" viewBox="0 0 200 200" class="pencil">
@@ -59,7 +59,7 @@
             </g>
         </svg>
         <div class="loader-text">Please Wait....</div>
-    </div>
+    </div> -->
     <a class="bot-div" href="#">
         <div class="bounce-text">Ask Bot!!</div>
         <video autoplay loop muted playsinline id="jidnyasaBoy">
