--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="background-overlay"></div>
     </div>
         <!-- Loader Screen -->
-    <div class="loader-container" id="loader">
+    <!-- <div class="loader-container" id="loader">
         <div class="background-image"></div>
         <div class="background-overlay"></div>
         <svg xmlns="http://www.w3.org/2000/svg" height="200px" width="200px" viewBox="0 0 200 200" class="pencil">
@@ -59,7 +59,7 @@
             </g>
         </svg>
         <div class="loader-text">Please Wait....</div>
-    </div>
+    </div> -->
 <!-- Floating Bot -->
     <div class="bot-container">
     <a class="bot-div" id="botToggle" href="javascript:void(0);">
@@ -575,7 +575,7 @@
     <a href="#"><i class="fab fa-instagram"></i></a>
   </div>
   <p>© 2025 Jinyasa Concept School. All rights reserved.</p>
-  <p>Develop by<a href="https://github.com/prajwaljamodkar"> Prajwal Jamodkar</a></p>
+  <p>Developed by <a href="https://github.com/prajwaljamodkar">Prajwal Jamodkar</a> & <a href="https://github.com/sarthakmehare">Sarthak Mehare</a></p>
   <script>
   window.addEventListener('scroll', () => {
     const footer = document.querySelector('.footer');
